--- a/package.json
+++ b/package.json
@@ -12,28 +12,34 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.7",
-    "@supabase/supabase-js": "^2.38.4",
+    "@supabase/supabase-js": "^2.45.4",
     "@tamagui/font-inter": "1.74.8",
     "@tamagui/react-native-media-driver": "1.74.8",
     "@tamagui/shorthands": "1.74.8",
     "@tamagui/themes": "1.74.8",
+    "@tamagui/toast": "^1.114.2",
+    "@tanstack/react-query": "^5.59.9",
+    "burnt": "^0.12.2",
     "expo": "^51.0.37",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "tamagui": "1.74.8"
   },
