--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
 
     "baseUrl": ".",
     "paths": {
-      "~/*": ["*"]
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@assets/*": ["src/assets/*"],
+      "@constants/*": ["src/constants/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
