--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./src/assets/favicon.png"
+      "favicon": "./src/assets/P.png"
     },
     "plugins": ["expo-router", "expo-secure-store"],
     "experiments": {
@@ -15,12 +15,15 @@
       "tsconfigPaths": true
     },
     "orientation": "portrait",
-    "icon": "./src/assets/icon.png",
+    "icon": "./src/assets/P.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./src/assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./src/assets/P.png",
+      "resizeMode": "native",
+      "backgroundColor": "#ffffff",
+      "width": 50,
+      "height": 50,
+      "padding": 50
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
@@ -28,8 +31,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/adaptive-icon.png",
+        "foregroundImage": "./src/assets/logoWithWriteup.png",
         "backgroundColor": "#ffffff"
+      },
+      "splash": {
+        "androidStatusBar": "transparent"
       }
     }
   }
