--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-navigation/native": "^6.1.7",
     "@supabase/supabase-js": "^2.45.4",
     "@tamagui/font-inter": "1.74.8",
@@ -23,6 +24,7 @@
     "@tamagui/toast": "^1.114.2",
     "@tanstack/react-query": "^5.59.9",
     "burnt": "^0.12.2",
+    "dayjs": "^1.11.13",
     "expo": "^51.0.38",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
