tried implementing exercise page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,11 @@
       "@constants/*": ["src/constants/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts",
+    "src/app/(tabs)/groups/exercise"
+  ]
 }
