--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
       "tsconfigPaths": true
     },
     "orientation": "portrait",
-    "icon": "./src/assets/prepeer.png",
+    "icon": "./src/assets/prepeerSplash.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/prepeerSplash.png",
@@ -27,11 +27,19 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "splash": {
+        "image": "./src/assets/prepeerSplash.png",
+        "resizeMode": "native",
+        "backgroundColor": "#ffffff",
+        "width": 50,
+        "height": 50,
+        "padding": 50
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/logoWithWriteup.png",
+        "foregroundImage": "./src/assets/prepeerSplash.png",
         "backgroundColor": "#ffffff"
       },
       "splash": {
