--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "supabase": "^1.207.9",
+    "supabase-cli": "^0.0.21",
     "tamagui": "1.74.8"
   },
   "devDependencies": {
