--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ android
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+expo-env.d.ts
+package-lock.json
