--- a/app.json
+++ b/app.json
@@ -19,23 +19,12 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/prepeerSplash.png",
-      "resizeMode": "native",
-      "backgroundColor": "#ffffff",
-      "width": 50,
-      "height": 50,
-      "padding": 50
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
-      "supportsTablet": true,
-      "splash": {
-        "image": "./src/assets/prepeerSplash.png",
-        "resizeMode": "native",
-        "backgroundColor": "#ffffff",
-        "width": 50,
-        "height": 50,
-        "padding": 50
-      }
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
